[gd_scene load_steps=5 format=3 uid="uid://d4anv7i2dcbc0"]

[ext_resource type="Script" uid="uid://mhw10h1ujv1f" path="res://resources/overlap/attacks/CloudAttack.gd" id="1_0trbp"]
[ext_resource type="PackedScene" uid="uid://d33r368m8dmmc" path="res://resources/overlap/vfx/CloudSmoke.tscn" id="2_8vxbx"]
[ext_resource type="PackedScene" uid="uid://cfdvm6q5tp67i" path="res://resources/overlap/hit/Hurtbox.tscn" id="3_0trbp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0trbp"]

[node name="CloudAttack" type="Node2D"]
script = ExtResource("1_0trbp")

[node name="CloudSmoke" parent="." instance=ExtResource("2_8vxbx")]

[node name="Hurtbox" parent="." instance=ExtResource("3_0trbp")]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("CapsuleShape2D_0trbp")

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="frame_changed" from="CloudSmoke/SpriteBox" to="." method="_on_sprite_box_frame_changed"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]

[editable path="CloudSmoke"]
[editable path="CloudSmoke/SpriteBox"]
[editable path="Hurtbox"]
